--- a/students/templates/students/dashboard.html
+++ b/students/templates/students/dashboard.html
@@ -82,12 +82,15 @@
             </div>
             {% endfor %}
         </div>
+        <!--NEWS-->
         <div class="what">
             <h4 class="text-muted">What's new:</h4>
+            {% for activeCourse in activeCourses %}
             <div class="card headline">
-                <h4 class="">Headline 1</h4>
+                <h4 class="">{{activeCourse.title}}</h4>
                 <p class="text-muted">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quis accusantium animi ullam dolores </p>
             </div>
+            {% endfor %}
                 <div class="card headline">
                 <h4 class="">Headline 2</h4>
                 <p class="text-muted">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quis accusantium animi ullam dolores </p>
@@ -100,10 +103,10 @@
     </div>
     <div class="card courses">
         <h4 class="text-muted">My Courses:</h4>
-        {% for course in courses %}
+        {% for activeCourse in activeCourses %}
         <div class="card angular">
-            <h5 class="text-muted">{{course.category}}</h5>
-            <img src="{{course.coursePoster.url}}" alt="" style="height:230px">
+            <h5 class="text-muted">{{activeCourse.category}}</h5>
+            <img src="{{activeCourse.coursePoster.url}}" alt="" style="height:230px">
             <p class="pt-5" style="width: 100%; margin:auto;"><progress value="100" max="100" class="ang"></progress></p>
             <p style="width: 80%; margin:auto;" class="text-muted">
                 <span>5/5 lessons</span>
