--- a/students/templates/students/availablePrograms.html
+++ b/students/templates/students/availablePrograms.html
@@ -27,13 +27,13 @@
             </li>
             <ul class="menu-links">
                 <li class="nav-link">
-                    <a href="#">
+                    <a href="{% url 'home' %}">
                         <i class='bx bx-home-alt icon' ></i>
                         <span class="text nav-text">HOME</span>
                     </a>
                 </li>
                 <li class="nav-link">
-                    <a href="#">
+                    <a href="{% url 'programs' %}">
                         <i class='bx bx-bar-chart-alt-2 icon' ></i>
                         <span class="text nav-text">PROGRAMS</span>
                     </a>
@@ -49,7 +49,7 @@
         </div>
         <div class="bottom-content">
             <li class="">
-                <a href="#">
+                <a href="logout">
                     <i class='bx bx-log-out icon' ></i>
                     <span class="text nav-text">Log Out</span>
                 </a>
