--- a/students/templates/students/dashboard.html
+++ b/students/templates/students/dashboard.html
@@ -21,11 +21,17 @@
 
     <div class="menu-bar">
         <div class="menu">
-            <li class="search-box">
+            <!-- <li class="search-box">
                 <i class='bx bx-search icon'></i>
                 <input type="search" placeholder="Search...">
-            </li>
+            </li> -->
             <ul class="menu-links">
+                <li class="nav-link">
+                    <a href="#">
+                        <i class='bx bxs-graduation icon' ></i>
+                        <span class="text nav-text">WELCOME STUDENT!</span>
+                    </a>
+                </li>
                 <li class="nav-link">
                     <a href="#">
                         <i class='bx bx-home-alt icon' ></i>
