--- a/students/templates/students/register.html
+++ b/students/templates/students/register.html
@@ -29,10 +29,10 @@
             <div class="col-md-6 mx-auto">
               <div class="card">
                 <div class="card-header text-black" style="color: #5E5CC0; text-align: center;">
-                  <h2><strong>Welcome</strong></h2>
+                  <h2><strong>Welcome!</strong></h2>
                 </div>
-                <div class="txt">
-                  <p>To keep connected to us please<br>enter your details here to sign up</p>
+                <div class="txt" style="text-align: center; opacity: 0.5;">
+                  <p><small>To keep connected to us please<br>enter your details here to sign up</small></p>
                 </div>
                 <div class="card-body">
                     <form action="{% url 'register' %}" method="POST" novalidate>
