--- a/students/templates/students/login.html
+++ b/students/templates/students/login.html
@@ -31,8 +31,11 @@
 
 
               <div class="card">
-                <div class="card-header text-black">
-                  <h2>Login</h2>
+                <div class="card-header text-black" style="color: #5E5CC0; text-align: center;">
+                  <h2><strong>Welcome Back!</strong></h2>
+                </div>
+                <div class="txt" style="text-align: center; opacity: 0.5; margin-top: 2%;">
+                  <p><small>To keep connected to us please<br>enter your details here to sign up</small></p>
                 </div>
                 <div class="card-body">
                     <form action="{% url 'login' %}" method="POST" novalidate>
