--- a/students/templates/students/register.html
+++ b/students/templates/students/register.html
@@ -10,7 +10,8 @@
     <title>Demo Registration</title>
 </head>
 <body>
-
+  <a class="navbar-brand" href="{% url 'home' %}" style="font-weight: bold;">MASOMO <span
+    style="color: #5E5CC0;">POPOTE</span></a>
     <section>
         <div class="container">
           <div class="row">
