--- a/tutors/templates/tutors/tutor.html
+++ b/tutors/templates/tutors/tutor.html
@@ -1,3 +1,121 @@
-<h1>
-    Tutor's Dashboard
-</h1>
+{% extends 'base.html' %}
+{% load static%}
+{% block styles %}
+
+<link rel="stylesheet" href="{% static 'css/style.css' %}">
+{% endblock styles %}
+
+
+{% block content %}
+
+<nav class="sidebar close">
+    <header>
+        <div class="image-text">
+            <div class="text header-text">
+                <span class="name">MASOMO <span style="color: #5E5CC0;">POPOTE</span> </span><br>
+            </div>
+        </div>
+
+        <i class="bx bx-chevron-right toggle"></i>
+    </header>
+
+    <div class="menu-bar">
+        <div class="menu">
+            <li class="search-box">
+                <i class='bx bx-search icon'></i>
+                <input type="search" placeholder="Search...">
+            </li>
+            <ul class="menu-links">
+                <li class="nav-link">
+                    <a href="{% url 'home' %}">
+                        <i class='bx bx-home-alt icon'></i>
+                        <span class="text nav-text">HOME</span>
+                    </a>
+                </li>
+                <li class="nav-link">
+                    <a href="{% url 'course' %}">
+                        <i class='bx bx-plus-circle icon'></i>
+                        <span class="text nav-text">COURSE</span>
+                    </a>
+                </li>
+                <li class="nav-link">
+                    <a href="{% url 'test' %}">
+                        <i class='bx bx-list-plus icon'></i>
+                        <span class="text nav-text">TEST</span>
+                    </a>
+                </li>
+                <li class="nav-link">
+                    <a href="{% url 'postedcourses' %}">
+                        <i class='bx bx-book-open icon'></i>
+                        <span class="text nav-text">POSTED COURSES</span>
+                    </a>
+                </li>
+                <li class="nav-link">
+                    <a href="{% url 'postedtest' %}">
+                        <i class='bx bx-slideshow icon'></i>
+                        <span class="text nav-text">POSTED TESTS</span>
+                    </a>
+                </li>
+
+            </ul>
+        </div>
+        <div class="bottom-content">
+            <li class="">
+                <a href="logout">
+                    <i class='bx bx-log-out icon'></i>
+                    <span class="text nav-text">Log Out</span>
+                </a>
+            </li>
+
+            <li class="mode">
+                <div class="moon-sun">
+                    <i class='bx bx-moon icon moon'></i>
+                    <i class='bx bx-sun icon sun'></i>
+                </div>
+                <span class="mode-text text">Dark Mode</span>
+
+                <div class="toggle-switch">
+                    <span class="switch"></span>
+                </div>
+            </li>
+        </div>
+    </div>
+</nav>
+<section class="home">
+    <h3 class="text">My Dashboard</h3>
+    <div class="intro">
+        <div class="card tutor">
+            <h4 class="text-muted">Enrollment list:</h4>
+            {% for test in tests %}
+            <div class="card tests">
+                <h4 style="color: #5E5CC0;">FirstName LastName</h4>
+                <small>Program</small>
+                <strong>
+                    <p style="float: right; text-transform: uppercase; color:#5E5CC0;">View</p>
+                </strong>
+            </div>
+            {% endfor %}
+        </div>
+    </div>
+    <div class="card courses">
+        <h4 class="text-muted">Published Courses:</h4>
+        {% for activeCourse in activeCourses %}
+        <div class="card angular">
+            <h5 class="text-muted">{{activeCourse.course.category}}</h5>
+            <img src="{{activeCourse.course.coursePoster.url}}" alt="" style="height:230px">
+            <p class="pt-5" style="width: 100%; margin:auto;"><progress value="100" max="100" class="ang"></progress>
+            </p>
+            <p style="width: 80%; margin:auto;" class="text-muted">
+                <span>Enrolled students:</span>
+            </p>
+        </div>
+        {% endfor %}
+
+
+    </div>
+
+</section>
+
+
+
+{% endblock %}
