--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -334,6 +334,17 @@ section.home {
     width: calc(100% - 88px);
 }
 
+.tutor {
+    width: 95%;
+    background-color: rgba(255, 255, 255, 0.2);
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    border-radius: 16px;
+    border-top: 0;
+    padding: 20px 25px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(5px);
+}
+
 .new, .what{
     width: 45%;
     background-color: rgba(255, 255, 255, 0.2);
