--- a/tutors/templates/tutors/tutor.html
+++ b/tutors/templates/tutors/tutor.html
@@ -27,31 +27,31 @@
             </li>
             <ul class="menu-links">
                 <li class="nav-link">
-                    <a href="{% url 'home' %}">
+                    <a href="{% url 'tutor' %}">
                         <i class='bx bx-home-alt icon'></i>
                         <span class="text nav-text">HOME</span>
                     </a>
                 </li>
                 <li class="nav-link">
-                    <a href="{% url 'course' %}">
+                    <a href="{% url 'new-course' %}">
                         <i class='bx bx-plus-circle icon'></i>
                         <span class="text nav-text">COURSE</span>
                     </a>
                 </li>
                 <li class="nav-link">
-                    <a href="{% url 'test' %}">
+                    <a href="{% url 'new-test' %}">
                         <i class='bx bx-list-plus icon'></i>
                         <span class="text nav-text">TEST</span>
                     </a>
                 </li>
                 <li class="nav-link">
-                    <a href="{% url 'postedcourses' %}">
+                    <a href="#">
                         <i class='bx bx-book-open icon'></i>
                         <span class="text nav-text">POSTED COURSES</span>
                     </a>
                 </li>
                 <li class="nav-link">
-                    <a href="{% url 'postedtest' %}">
+                    <a href="#">
                         <i class='bx bx-slideshow icon'></i>
                         <span class="text nav-text">POSTED TESTS</span>
                     </a>
@@ -61,7 +61,7 @@
         </div>
         <div class="bottom-content">
             <li class="">
-                <a href="logout">
+                <a href="{% url 'tutor-logout' %}">
                     <i class='bx bx-log-out icon'></i>
                     <span class="text nav-text">Log Out</span>
                 </a>
