--- a/tutors/templates/tutors/newCourse.html
+++ b/tutors/templates/tutors/newCourse.html
@@ -60,7 +60,7 @@
                     </a>
                 </li> -->
                 <li class="nav-link">
-                    <a href="#">
+                    <a href="{% url 'postedTest' %}">
                         <i class='bx bx-slideshow icon'></i>
                         <span class="text nav-text">POSTED TESTS</span>
                     </a>
