--- a/tutors/templates/tutors/register.html
+++ b/tutors/templates/tutors/register.html
@@ -48,6 +48,8 @@
                              <input type="submit" value="Register" class="btn btn-block btn-primary">
                            </div>
                     </form>
+                    <p><small>ALREADY HAVE AN ACCOUNT? LOGIN HERE</small></p>
+                    <a href="{% url 'tutor-login' %}" class="btn btn-block btn-primary">LOGIN</a>
                     
                  </div>
                     </div>   
