--- a/students/templates/students/register.html
+++ b/students/templates/students/register.html
@@ -1,4 +1,6 @@
 {% load widget_tweaks %}
+{% load static%}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,12 +9,15 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
     crossorigin="anonymous">
-    <title>Demo Registration</title>
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+
+    <title>Masomo Popote | Students</title>
 </head>
-<body>
-  <a class="navbar-brand" href="{% url 'home' %}" style="font-weight: bold;">MASOMO  <span
+<body style="background-color: #F0EDED;">
+  <a class="navbar-brand fixed-top" href="{% url 'home' %}" style="font-weight: bold; color: black;">MASOMO  <span
     style="color: #5E5CC0;">POPOTE</span></a>
-    <section>
+
+    <section style="background-color: #F0EDED;">
         <div class="container">
           <div class="row">
             <div class="col-md-5" style="margin-top: 15%;">
@@ -27,15 +32,11 @@
               
             </div>
            
-            <div class="col-md-6 mx-auto">
-              <div class="card">
-                <div class="card-header text-black" style="color: #5E5CC0; text-align: center;">
-                  <h2><strong>Welcome!</strong></h2>
-                </div>
+            <div class="col-md-6 mb-2 mx-auto card new" style="margin-top: 5%;">
+                  <h2 class="text-center pt-4" style="color: #5E5CC0;">Welcome!</strong></h2>
                 <div class="txt" style="text-align: center; opacity: 0.5;">
-                  <p><small>To keep connected to us please<br>enter your details here to sign up</small></p>
+                  <p><small>Sign up to get started...</small></p>
                 </div>
-                <div class="card-body">
                     <form action="{% url 'register' %}" method="POST" novalidate>
                       {% csrf_token %}
                          {% for field in form.visible_fields %}
@@ -47,13 +48,12 @@
                                     {% endfor %}
                          {% endfor %}
                          <br>
-                             <input type="submit" value="Register" class="btn btn-block btn-primary">
+                             <input type="submit" value="Register" class="btn btn-block btn-primary" style="background-color: #5E5CC0;">
                            </div>
                     </form>
                     <small>Already have an Account? Log In here</small>
-                    <a href="{% url 'login' %}" class="btn btn-block btn-primary">LOGIN HERE</a>
-                 </div>
-                    </div>   
+                    <a href="{% url 'login' %}" class="btn btn-block btn-primary" style="background-color: #5E5CC0;">LOGIN HERE</a>
+                
                 </div>
               </div>
             </div>
