--- a/tutors/templates/tutors/login.html
+++ b/tutors/templates/tutors/login.html
@@ -1,4 +1,6 @@
 {% load widget_tweaks %}
+{% load static%}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,34 +9,34 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
     crossorigin="anonymous">
-    <title>Demo Registration</title>
-</head>
-<body>
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
 
+    <title>Masomo Popote | Tutor</title>
+</head>
+<body style="background-color: #F0EDED;">
+  <a class="navbar-brand fixed-top" href="{% url 'home' %}" style="font-weight: bold; color: black;">MASOMO  <span
+    style="color: #5E5CC0;">POPOTE</span></a>
     <section>
         <div class="container" style="margin-top: 5%;">
           <div class="row">
 
-            <div class="col-md-5">
+            <div class="col-md-5" >
 
               <div class="text">
                 <h2><strong>Join the best tutor team <br>in the world today</strong></h2>
               </div>
 
-              <div class="image">
-                {% load static %} <img src="{% static "tutors/media/tutors.webp" %}" alt="tutors" style= "width: 80%"; height=50%";/>
+              <div class="image" >
+                {% load static %} <img src="{% static 'assets/prof.png' %}" alt="tutors" style= "width: 80%"; height=50%";/>
               </div>
               
             </div>
-            <div class="col-md-6 mx-auto">
-              <div class="card" style= "text-align: center;">
-                <div class="card-header text-black" style="color:#5E5CC0;">
-                  <h2><strong>Welcome Back!</strong></h2>
+            <div class="col-md-6 mx-auto card new">
+                  <h2 class="text-center pt-4" style="color: #5E5CC0;"><strong>Welcome Back!</strong></h2>
+                <div class="txt" style="text-align: center; opacity: 0.5; margin-top: 1%;">
+                  <p><small>Sign in to stay connected...</small></p>
                 </div>
-                <div class="txt" style="text-align: center; opacity: 0.5; margin-top: 2%;">
-                  <p><small>To keep connected to us please<br>enter your details here to sign up</small></p>
-                </div>
-                <div class="card-body">
+                <!-- <div class="card-body"> -->
                     <form action="{% url 'tutor-login' %}" method="POST" novalidate>
                       {% csrf_token %}
                          {% for field in form.visible_fields %}
@@ -48,11 +50,13 @@
                                      {% endif %}
                          {% endfor %}
                          <br>
-                             <input type="submit" value="Login" class="btn btn-block btn-primary">
+                             <input type="submit" value="Login" class="btn btn-block btn-primary" style="background-color: #5E5CC0;">
                            </div>
                     </form>
-                 </div>
-                    </div>   
+                    <small>New to Masomo Popote?</small>
+                    <a href="{% url 'tutor-reg' %}" class="btn btn-block btn-primary" style="background-color: #5E5CC0;">REGISTER HERE</a>
+                 
+                 <!-- </div> -->
                 </div>
               </div>
             </div>
