--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -95,7 +95,7 @@
 
 :root {
     /* ==== Colors ===== */
-    --body-color: #Ffff;
+    --body-color: #F2EFEF;;
     --sidebar-color: #FFF;
     --primary-color: #5E5CC0;
     --primary-color-light: #F6F5FF;
